
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 MAY 28b
  * in model/fluid/_Favre-Reynolds/fluid_bdry.c
    - fixed a bug in update_bdry_wall_ablation()
    - got rid of wwall=0 for charged species in update_bdry_wall_ablation()
    

2024 MAY 28a
  * in lib/exm/exm.c
    - in powint(), added assert(y>=0);
  * in model/chem/_Cs_Air_Plasma_15s/chem.hh
    - added the species ``C''
  * in model/fluid/_Favre-Reynolds/fluid_bdry.c
    - made modifications to update_bdry_wall_ablation()
    - made modifications to _heat_to_surface()
    

2024 MAY 24a
  * in model/fluid/_Favre-Reynolds/fluid_bdry.c
    - added find_bdry_node_surface() and _heat_to_surface()
    

2024 MAY 23a
  * in model/fluid/_Favre-Reynolds/fluid_bdry.c
    - made further improvements to update_bdry_wall_ablation()


2024 MAY 22a
  * in model/fluid/_Favre-Reynolds/fluid_bdry.c
    - started implementation of BDRY_WALLABLATION1
    - added update_bdry_wall_ablation()
 

2024 MAY 21a
  * in model/chem/_Cs_Air_Plasma_15s/chem.c
    - added AIRCHEMMODEL_PARENT2023
    - added CESIUMCHEMMODEL_PARENT2024
    - got rid of CESIUMIONIZATIONMODEL* and CESIUMRECOMBINATIONMODEL* options and rather implemented
      CESIUMCHEMMODEL_LENARD1964, CESIUMCHEMMODEL_ANDRIENKO2021, and CESIUMCHEMMODEL_PARENT2022
  * in model/chem/_Cs_Air_Plasma_15s/doc/report.tex
    - updated the documentation to match later changes
  * in model/chem/_Cs_Air_Plasma_15s
    - added parent2023.c and parent2023.h


2024 MAY 16a
  * in model/share/transport_share.c
    - added _mueN_CO()
    - in _mueNk_from_Te_ParentMacheret(), added call to _mueN_CO()
    - in _mueNk_from_Te_ParentMacheret(), now calls _mueN_N2(Te) should the species mobility